# ReactFS

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_test.sh
common/: CMakeLists.txt
common/adhoc/: adhoc.cpp  main_common.cpp  main_murmur.cpp  main_shared_lock.cpp  main_thread_pool.cpp
common/includes/: __alarm.h  __app.h  __bitset.h  __callback.h  __env.h  __log.h  __registry.h  __signals.h  __state__.h  __threads.h  alarm.h  base_error.h  buffer_utils.h  common.h  common_utils.h  config.h  exclusive_lock.h  file_utils.h  fmstream.h  init_utils.h  lock_record_def.h  lock_structs_v0.h  lock_utils.h  log_utils.h  mapped_data.h  metrics.h  process_utils.h  read_write_lock.h  read_write_lock_client.h  read_write_lock_manager.h  rw_lock_structs_v0.h  shared_lock.h  shared_lock_utils.h  time_utils.h  timer.h  write_lock.h  write_lock_client.h  write_lock_manager.h
common/includes/mm/: memory_manager.h
common/src/: __env.cpp  __registry.cpp  __signals.cpp  common.cpp  config.cpp  file_utils.cpp  fmstream.cpp  init_utils.cpp  log_utils.cpp  metrics.cpp  read_write_lock.cpp  read_write_lock_client.cpp  read_write_lock_manager.cpp  shared_lock.cpp  shared_lock_utils.cpp  write_lock.cpp  write_lock_client.cpp  write_lock_manager.cpp
common/src/ext/: murmur3.c
common/src/json11/: json.cpp  json.h
common/test/: CMakeLists.txt  test_alarm.cpp  test_alarm.h  test_common.h  test_config.cpp  test_config.h  test_file_utils.cpp  test_file_utils.h  test_node_client.h  test_shared_lock.cpp  test_shared_lock.h  test_thread_pool.cpp
common/test/data/: test-conf.json
core/: CMakeLists.txt
core/adhoc/: core_adhoc.cpp  main_compress.cpp  main_fsb.cpp  main_mm_struct.cpp  main_node_client.cpp  main_node_env.cpp  main_typed_b.cpp
core/includes/: archive_reader.h  archive_writer.h  base_block.h  base_block_index.h  base_indexed_block.h  block_archiver.h  block_common_structs_v0.h  block_factory.h  block_shared_defs.h  block_utils.h  common_structs.h  compression.h  compression_factory.h  compression_zlib.h  core.h  fmstream.h  fs_block.h  fs_error_base.h  fs_file.h  fs_image_structs.h  fs_node.h  fs_node_env.h  fs_typed_block.h  mm_block_meta.h  mm_struct_header.h  mm_structs_v0.h  mount_manager.h  mount_structs.h  mount_structs_v0.h  node_env.h  node_env_structs.h  typed_block.h  typed_hash_index.h  typed_index_base.h  usage_metric_defs.h
core/includes/clients/: mount_client.h  node_client_env.h
core/includes/parsers/: schema_parser.h  schema_scanner.h
core/includes/server/: mount_manager.h  node_init_manager.h  node_server_env.h
core/includes/structs/: mm_hash_table.h  mm_queue.h
core/includes/types/: __constraints.h  schema.h  schema_def.h  schema_parser.h  type_defs.h  type_errors.h  types_common.h
core/parsers/: schema.l  schema.yy
core/proto/: fs_file_struct.proto
core/src/: archive_reader.cpp  archive_writer.cpp  base_block.cpp  base_block_index.cpp  base_indexed_block.cpp  block_archiver.cpp  compression_factory.cpp  compression_zlib.cpp  fmstream.cpp  fs_block.cpp  fs_error_base.cpp  fs_file.cpp  fs_node.cpp  fs_node_env.cpp  fs_typed_block.cpp  mm_block_meta.cpp  mm_struct_header.cpp  mount_manager.cpp  node_env.cpp  typed_block.cpp  typed_hash_index.cpp
core/src/client/: mount_client.cpp  node_client_env.cpp
core/src/parsers/: Makefile  location.hh  main.cpp  position.hh  schema.h  schema.tab.cc  schema.tab.hh  schema_driver.h  schema_lexer.yy.cc  schema_parser.cpp  schema_scanner.cpp  schema_scanner.h  stack.hh  t.schema
core/src/server/: mount_manager.cpp  node_init_manager.cpp  node_server_env.cpp
core/src/structs/: mm_hash_table.cpp
core/src/types/: schema_def.cpp  schema_parser.cpp  type_defs.cpp
core/test/: CMakeLists.txt  test_node_client.cpp  test_node_client.h  test_node_manager.cpp  test_node_manager.h
core/test/data/: test-node-conf.json
parsers/: CMakeLists.txt
parsers/adhoc/: main_gen_class.cpp  main_schema_p.cpp
parsers/includes/: code_generator.h  code_generator_cpp.h  cpp_file_template.h  cpp_template.h  cpp_template_defs.h  cpp_template_header.h  schema.h  schema_driver.h  schema_scanner.h  schema_tokens.h  style.h
parsers/src/: generator_util.cpp  generator_util.h  location.hh  position.hh  schema_driver.cpp  schema_lexer.cpp  schema_parser.cpp  schema_parser.l  schema_parser.yy  schema_scanner.cpp  stack.hh  template_util.cpp  template_util.h
parsers/templates/: cpp_template.data  cpp_template.tmpl
parsers/test/: test_type_data.h
parsers/test/data/: test.schema
types/: CMakeLists.txt
types/adhoc/: main_types_test.cpp
types/includes/: __base_type.h  __constraints.h  schema_common.h  schema_def.h  schema_helpers.h  shared_structs.h  type_core.h  type_defs.h  type_errors.h  type_helpers.h  type_interface.h  types_common.h
types/src/: schema_def.cpp  type_defs.cpp
watergate/: CMakeLists.txt
watergate/adhoc/: main_sems.cpp
watergate/includes/: __fs_base.h  control.h  control_def.h  control_errors.h  control_manager.h  exclusive_lock.h  filesystem_driver.h  fs_writer.h  init_utils.h  lock_table.h  resource_creator.h  resource_def.h  resource_factory.h
watergate/src/common/: __env.cpp  config.cpp  file_utils.cpp  log_utils.cpp  metrics.cpp
watergate/src/core/: init_utils.cpp
watergate/src/core/control/: comtrol_manager.cpp  control.cpp  control_def.cpp  control_manager.cpp  dummy_resource.cpp  dummy_resource.h  lock_table.cpp  resource_def.cpp  resource_factory.cpp
watergate/src/core/ext/: resource_helper.h
watergate/src/jni/: lock_client_jni.cpp  lock_env_jni.cpp  lock_manager_jni.cpp
watergate/src/test/: main.cpp  main_basic.cpp  main_fs.cpp  main_fs.h  main_lock_table.cpp  main_sems.cpp
watergate/test/: CMakeLists.txt  run_test.sh  test_fs_writer.cpp  test_fs_writer.h  test_lock_client.cpp  test_lock_client.h  test_lock_table.cpp  test_lock_table.h  test_sem_lock.cpp  test_sem_lock.h
watergate/test/core/: test_lock_client.cpp  test_lock_client.h  test_lock_table.cpp  test_lock_table.h  test_sem_lock.cpp  test_sem_lock.h
watergate/test/data/: fs-data.txt  test-sem-conf.json
(+39 files in other folders)
